# whatsapp-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/knowledge/: exemplo_base_conhecimento.md
docs/: ARCHITECTURE.md  GUIA.md
scripts/: ingest_kb.py  migrate.py
src/chatbot/: __init__.py  main.py
src/chatbot/agent/: compaction.py  graph.py  llm.py  prompts.py  runner.py  state.py
src/chatbot/api/: middleware.py
src/chatbot/api/routes/: admin.py  health.py  webhook.py
src/chatbot/core/: config.py  exceptions.py  logging.py  observability.py
src/chatbot/domain/: dates.py  segments.py  stores.py  text.py
src/chatbot/infra/: db.py  queue.py  redis_client.py  vectorstore.py
src/chatbot/integrations/erp/: sales_api.py
src/chatbot/integrations/waha/: client.py  models.py
src/chatbot/memory/: extractor.py  manager.py
src/chatbot/rag/: embeddings.py  ingestion.py  reranker.py  retriever.py
src/chatbot/tools/: __init__.py  dates.py  knowledge.py  sales.py  stores.py
src/chatbot/workers/: message_worker.py
tests/: conftest.py
tests/integration/: test_webhook_smoke.py
tests/unit/: test_dates.py  test_segments.py  test_stores.py  test_text.py
